k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-ultra
  namespace: crud-ultra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-ultra
  template:
    metadata:
      labels:
        app: crud-ultra
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: app
          image: crud-ultra:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
